# cppl-homework

./: .gitignore
hw.03/task.01/: smart_array.cpp
hw.03/task.02/: copy_smart_array.cpp
hw.04/task.04.01/: CMakeLists.txt
hw.04/task.04.02/: .gitignore  CMakeLists.txt
